scroll page shift issue fixed
+ Updared Readme

--- a/jquery.modally.css
+++ b/jquery.modally.css
@@ -1,11 +1,5 @@
 @charset "UTF-8";
 
-html.scroll-block {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-}
-
 .modally-wrap {
     height: 100%;
     position: fixed;
